Bugfix: changed img width from absolute (px) to relative (%) value to prevent overflow on smaller devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -307,10 +307,10 @@ a:hover {
 .index-box img, /* controls album artwork on index.html */
 .shop-box img {  /* controls album artwork on shop.html */
     border-radius: 10px;
-    height: 250px;
     margin: 10px;
     padding-top: 5px;
     padding-bottom: 5px;
+    width: 90%;
 }
 
 .shop-box img {
@@ -333,7 +333,7 @@ a:hover {
     font-size: 40px;
     font-weight: 600;
     letter-spacing: 6px;
-    padding-top: 10px;
+    padding: 15px;
     text-align: center;
     text-transform: uppercase;
 }
@@ -364,6 +364,10 @@ a:hover {
 .index-banner a {
     color: #f2f2f2;
     text-align: justify;
+}
+
+.index-banner p {
+    padding: 15px;
 }
 
 .media {
